--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,12 @@
-
 {
   "name": "Plant Watering Reminder",
   "short_name": "WaterReminder",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#f0f3f7",
-  "theme_color": "#4e9af1",
-  "icons":[
-    {"src":"icon-192.png","sizes":"192x192","type":"image/png"},
-    {"src":"icon-512.png","sizes":"512x512","type":"image/png"}
+  "background_color": "#f6fff7",
+  "theme_color": "#92d5a8",
+  "icons": [
+    {"src": "icon-192.png", "sizes": "192x192", "type": "image/png"},
+    {"src": "icon-512.png", "sizes": "512x512", "type": "image/png"}
   ]
 }
